--- a/static/css/about.css
+++ b/static/css/about.css
@@ -150,6 +150,8 @@ a {
 .image-wrapper {
     margin-top: 70px;
     margin-bottom: 70px;
+    margin-right: 15px;
+    margin-left: 15px;
     height: 100%;
     display: grid;
     grid-auto-flow: column;
@@ -305,7 +307,7 @@ div.d {
     }
 }*/
 
-#glowing-circle {
+/*#glowing-circle {
     z-index: 3;
     position: absolute;
     width: 30px;
@@ -315,4 +317,4 @@ div.d {
     box-shadow: 0 0 35px rgba(0, 0, 0, 0.35), 0 0 45px rgba(0, 0, 0, 0.35), 0 0 55px rgba(0, 0, 0, 0.35);
     pointer-events: none;
     transform: translate(-50%, -50%);
-}
+}*/
