--- a/templates/about.html
+++ b/templates/about.html
@@ -32,15 +32,15 @@
             </a>
             </div>
         </div>  
-        <div class="page-column-section" style="margin-top: 375px;">
-            <div class="page-column-section">
+        <div class="page-column-section" style="margin-top: 475px;">
+            <div class="page-column-section" style="margin-top: 100px;">
                 <div class="image-container">
                     <div class="image-wrapper">
                         <div>
                             <img class="revolving-img" src="{{ url_for('static', filename='images/img1.jpeg')}}">
                         </div>
                         <div>
-                            <img class="revolving-img" src="{{ url_for('static', filename='images/img2.jpeg')}}">
+                            <img class="revolving-img" style="object-position: center 33%;" src="{{ url_for('static', filename='images/img2.jpeg')}}">
                         </div>
                         <div>
                             <img class="revolving-img" src="{{ url_for('static', filename='images/img3.jpeg')}}">
@@ -51,7 +51,7 @@
                     </div>
                 </div>
             </div>
-            <div class="page-column-section"  style="margin-top: 40px;">
+            <div class="page-column-section"  style="margin-top: 100px;">
                 <div class="content">
                     <p class="page-text">
                         What's Up, I'm Avery Allen! I am a High School Student at Anderson High School in Austin, and I am working on this website to hone my skills and share things about me. I am currently unemployed but I divulge in many hobbies including coding fun projects, like this one, playing tennis, working out, learning spanish, watching youtube vidoes, and of course hanging out with friends.
