--- a/templates/projects.html
+++ b/templates/projects.html
@@ -23,7 +23,7 @@
                     <div class="selector-content">
                         <div class="content default-mode">
                             <div class="page-row-section inner-row-section">
-                                <img src="{{ url_for('static', filename='images/fistbumpHome.jpeg')}}">
+                                <img class="project-img" src="{{ url_for('static', filename='images/fistbumpHome.jpeg')}}">
                                 <div class="page-column-section inner-column-section">
                                     <h1 class="page-text" style="font-size: 45px;">Fistbump</h1>
                                     <p class="page-text" style="font-size: 20px; color: darkgrey;">Innovative Social Media App and Website Joint Project</p>
@@ -41,7 +41,7 @@
                     <div class="selector-content">
                         <div class="content default-mode">
                             <div class="page-row-section inner-row-section">
-                                <img src="{{ url_for('static', filename='images/positive_data_word_cloud.jpeg')}}">
+                                <img class="project-img" src="{{ url_for('static', filename='images/positive_data_word_cloud.jpeg')}}">
                                 <div class="page-column-section inner-column-section">
                                     <h1 class="page-text" style="font-size: 45px;">NLP for Finance</h1>
                                     <p class="page-text" style="font-size: 20px; color: darkgrey;"> Leveraging Machine Learning to analyze Stock Sentiment</p>
@@ -59,7 +59,7 @@
                     <div class="selector-content">
                         <div class="content default-mode">
                             <div class="page-row-section inner-row-section">
-                                <img src="{{ url_for('static', filename='images/anderson_coding_club.jpeg')}}">
+                                <img class="project-img" style="object-position: left 6%;" src="{{ url_for('static', filename='images/anderson_coding_club.jpeg')}}">
                                 <div class="page-column-section inner-column-section">
                                     <h1 class="page-text" style="font-size: 45px;">Anderson Coding Club</h1>
                                     <p class="page-text" style="font-size: 20px; color: darkgrey;">Website page for all needed information about coding club</p>
