--- a/static/css/projects.css
+++ b/static/css/projects.css
@@ -174,36 +174,34 @@ body {
     transition: transform 0.5s ease, box-shadow 0.5s ease;
 }
 
-.content::before {
+.content::before, content::after{
     content: "";
-    background: none;
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    top: -10px;
+    left: -10px;
+    right: -10px;
+    bottom: -10px;
     background: white;
     border-radius: 4px;
-    z-index: -1;
+    z-index: 100;
     transform-origin: center center;
     transition: all 0.5s ease;
-    box-shadow: 0 3px 10px rgb(0, 0, 0, 0.15);
+    box-shadow: 0 3px 10px 1px rgb(0, 0, 0, 0.2);
+    animation: subtleRippleEffect 5s infinite ease-in-out alternate;
 }
 
 .content.default-mode::before {
-    background: rgb(246, 246, 246);
-    box-shadow: 0 3px 10px rgb(0, 0, 0, 0.15);
+    background: transparent;
 }
 
 .content.default-mode:hover::before {
-    animation: none;
+    animation: bigRippleEffect .7s ease-in-out forwards;
     transform: scale(1.05, 1.05);
-    box-shadow: 0 3px 10px rgb(0, 0, 0, 0.15);
+    box-shadow: 0 3px 10px 1px rgb(0, 0, 0, 0.2);
 }
 
 .content.default-mode:hover {
     background: none;
-    box-shadow: 0 3px 10px rgb(0, 0, 0, 0.15);
 }
 
 .content.default-mode:hover .page-text {
@@ -220,8 +218,8 @@ body {
 }
 
 .content.alt-mode::before {
-    background: white;
-    box-shadow: 0 3px 10px rgb(0, 0, 0, 0);
+    background: transparent;
+    box-shadow: none;
 }
 
 .content.alt-mode:hover::before {
@@ -250,9 +248,19 @@ img {
 
 .gradient-hr {
     border: 0;
-    height: 1.5px;
+    height: 2px;
     background: linear-gradient(to right, lightblue, lightgreen, pink);
     width: 75%;
+}
+
+.project-img {
+    animation: none;
+    transition: all 0.5s ease;
+    object-fit: cover;
+}
+
+.content.default-mode:hover .project-img {
+    animation: smallRippleEffect .6s ease-in-out forwards;
 }
 
 @keyframes animationOne {
@@ -283,4 +291,101 @@ img {
 @keyframes slidingAnimationLeft {
     0% { transform: translateX(0%); }
     100% { transform: translateX(-100%); }
+}
+
+@keyframes subtleRippleEffect {
+    0% {
+        border-radius: 2.5% 2.5% / 2.5% 2.5%; 
+    }
+ 
+    20% {
+        border-radius: 5% 4% 5% 4% / 4% 5% 4% 5%; 
+    }
+
+    40% {
+        border-radius: 7% 6% 7% 6% / 6% 7% 6% 7%; 
+    }
+    50% {
+        border-radius: 8% 7% 8% 7% / 7% 8% 7% 8%; 
+    }
+    60% {
+        border-radius: 7% 6% 7% 6% / 6% 7% 6% 7%;
+    }
+    80% {
+        border-radius: 5% 4% 5% 4% / 4% 5% 4% 5%; 
+    }
+    100% {
+        border-radius: 2.5% 2.5% / 2.5% 2.5%; 
+    }
+}
+
+  
+@keyframes bigRippleEffect {
+    0% {
+        border-radius: 5% 5% / 5% 5%; 
+    }
+
+    14% {
+        border-radius: 40% 15% 40% 15% / 15% 40% 15% 40%; 
+    }
+    27% {
+        border-radius: 35% 25% 35% 25% / 25% 35% 25% 35%; 
+    }
+    9% {
+        border-radius: 30% 20% 30% 20% / 20% 30% 20% 30%; 
+    }
+    50% {
+        border-radius: 25% 15% 25% 15% / 15% 25% 15% 25%; 
+    }
+    60% {
+        border-radius: 20% 12% 20% 12% / 12% 20% 12% 20%;
+    }
+    70% {
+        border-radius: 15% 10% 15% 10% / 10% 15% 10% 15%; 
+    }
+    80% {
+        border-radius: 10% 8% 10% 8% / 8% 10% 8% 10%; 
+    }
+    90% {
+        border-radius: 7% 5% 7% 5% / 5% 7% 5% 7%;
+    }
+    100% {
+        border-radius: 5% 5% 5% 5% / 5% 5% 5% 5%;
+    }
+}
+
+@keyframes smallRippleEffect {
+    0% {
+        border-bottom-left-radius: 5%;
+    }
+    14% {
+        border-bottom-left-radius: 15%;
+    }
+    27% {
+        border-bottom-left-radius: 25%;
+    }
+    36% {
+        border-top-left-radius: 5%;
+        border-bottom-left-radius: 20%;
+    }
+    50% {
+        border-top-left-radius: 4%;
+        border-bottom-left-radius: 15%;
+    }
+    60% {
+        border-top-left-radius:3%;
+        border-bottom-left-radius: 12%;
+    }
+    70% {
+        border-top-left-radius: 2%;
+        border-bottom-left-radius: 10%;
+    }
+    80% {
+        border-top-left-radius: 1%;
+        border-bottom-left-radius: 8%;
+    }
+    90% {
+    }
+    100% {
+    }
 }
